import public "base.proto";package bbproto;message ReqAuthUser {	optional ProtoHeader	header				= 1;	optional TerminalInfo	terminal			= 2;	optional uint32			selectRole			= 3;	optional int32			appVersion			= 4;}